--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,14 @@
 name: datadive
 channels:
+  - plotly
+  - conda-forge
   - defaults
 dependencies:
-  - jupyterlab
-  - streamlit
-  - pandas
-  - geopandas
-  - scikit-learn
-  - plotly
-  - folium
+  - jupyterlab=4.0.6
+  - streamlit=1.26.0
+  - pandas=2.0.3
+  - geopandas=0.14.0
+  - scikit-learn=1.3.1
+  - plotly=5.17.0
+  - folium=0.14.0
 prefix: /Users/baminibalaji/miniconda3/envs/datadive
