--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jupyterlab=4.0.6
-  - streamlit=1.26.0
-  - pandas=2.0.3
-  - geopandas=0.14.0
-  - scikit-learn=1.3.1
-  - plotly=5.17.0
-  - folium=0.14.0
+  - jupyterlab
+  - streamlit
+  - pandas
+  - geopandas
+  - scikit-learn
+  - plotly
+  - folium
 prefix: /Users/baminibalaji/miniconda3/envs/datadive
