--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jupyterlab
-  - streamlit
-  - pandas
-  - geopandas
-  - scikit-learn
-  - plotly
-  - folium
+  - folium=0.14.0
+  - geopandas=0.14.0
+  - jupyterlab=4.0.6
+  - pandas=2.0.3
+  - plotly=5.17.0
+  - python=3.11.5
+  - scikit-learn=1.3.1
+  - streamlit=1.26.0
 prefix: /Users/baminibalaji/miniconda3/envs/datadive
